[gd_scene load_steps=3 format=3 uid="uid://daisebv88or8x"]

[ext_resource type="Script" path="res://scripts/ui/player_hud.gd" id="1_ccbg7"]
[ext_resource type="PackedScene" uid="uid://cpxkxkutg3mpd" path="res://scenes/ui/elements/stat_bar.tscn" id="2_nc342"]

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_ccbg7")

[node name="HealthBar" parent="." instance=ExtResource("2_nc342")]
offset_left = 5.0
offset_top = 5.0
offset_right = 305.0
offset_bottom = 25.0
color = Color(1, 0.25, 0.25, 1)

[node name="IgnisBar" parent="." instance=ExtResource("2_nc342")]
offset_left = 5.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 45.0
color = Color(1, 0.352941, 0.00392157, 1)

[node name="AerBar" parent="." instance=ExtResource("2_nc342")]
offset_left = 5.0
offset_top = 48.0
offset_right = 180.0
offset_bottom = 63.0
color = Color(1, 1, 0.494118, 1)

[node name="TerraBar" parent="." instance=ExtResource("2_nc342")]
offset_left = 5.0
offset_top = 66.0
offset_right = 180.0
offset_bottom = 81.0
color = Color(0.337255, 0.752941, 0, 1)

[node name="AquaBar" parent="." instance=ExtResource("2_nc342")]
offset_left = 5.0
offset_top = 84.0
offset_right = 180.0
offset_bottom = 99.0
color = Color(0.235294, 0.831373, 0.988235, 1)
